both docker can contact each other, stuck on 404 )

--- a/tv-shows-catalog/client/Dockerfile
+++ b/tv-shows-catalog/client/Dockerfile
@@ -1,16 +1,21 @@
 # Créer un Dockerfile pour cette application en mode production
 FROM node:lts AS builder
 
+ENV API_BASE_URL=http://nodejs-srv:3000
+
 WORKDIR /usr/src/app
 
-COPY package*.json ./
+COPY .env.example .env
 
-COPY .env.example /usr/share/nginx/html/.env
+COPY package*.json ./
 
 RUN npm install
 
 COPY . .
 
-EXPOSE 80
 
-CMD ["node", "build"]
+RUN npm run build
+
+EXPOSE 3000
+
+CMD ["node", "build/index.js"] 
