--- a/tv-shows-catalog/nginx/nginx.conf
+++ b/tv-shows-catalog/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
 
         location / {
             # Proxy requests to the SvelteKit client
-            proxy_pass http://webapp-clt/;
+            proxy_pass http://webapp-clt:3000/tv-shows;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
