--- a/restaurant-website/docker-compose.yaml
+++ b/restaurant-website/docker-compose.yaml
@@ -10,8 +10,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "80:80"
-    volumes:
-      - ./var:/var/www/html/var
+    # volumes:
+    #   - ./var:/var/www/html/var
     environment:
       - APP_ENV=prod
     restart: always
