--- a/restaurant-website/Dockerfile
+++ b/restaurant-website/Dockerfile
@@ -1,35 +1,26 @@
 # Créer un Dockerfile pour cette application en mode production
-FROM ubuntu:latest
+FROM php:8.3-fpm
 
-ENV DEBIAN_FRONTEND=noninteractive
 ENV COMPOSER_ALLOW_SUPERUSER=1
 ENV APP_ENV=prod
 ENV APP_DEBUG=0
 
-RUN apt update && \
-    apt install -y software-properties-common curl git supervisor  && \
-    apt clean
+RUN apt-get update \
+    && apt-get install -y \
+        git \
+        unzip \
+    && rm -rf /var/lib/apt/lists/*
 
-RUN add-apt-repository ppa:ondrej/php \
-    && apt update \
-    && apt install -y php8.3 php8.3-fpm php8.3-intl php8.3-xml php8.3-dom nginx \
-    && apt clean
 
-RUN curl -sS https://getcomposer.org/installer -o composer-setup.php && \
-    php composer-setup.php --install-dir=/usr/local/bin --filename=composer && \
-    rm composer-setup.php
-
-EXPOSE 80
-#pas bien
-COPY . /var/www/html 
 WORKDIR /var/www/html
+COPY . /var/www/html
 RUN rm .env
 COPY .envprod .env
 
-RUN composer install --no-dev --optimize-autoloader
+#COPY composer binary from composer image
+COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-COPY .docker/nginx/grilli.com.conf /etc/nginx/sites-enabled/
-COPY .docker/supervisor/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+RUN composer install --no-dev --optimize-autoloader --no-interaction
 
 RUN mkdir -p /run/php/
 
@@ -39,4 +30,5 @@ RUN chown -R www-data:www-data /var/www/html/var
 
 RUN php bin/console cache:clear --env=prod
 
-CMD ["/usr/bin/supervisord", "-n", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+EXPOSE 80
+CMD ["php-fpm"]
