--- a/tv-shows-catalog/nginx/nginx.conf
+++ b/tv-shows-catalog/nginx/nginx.conf
@@ -1,26 +1,42 @@
 # /etc/nginx/conf.d/default.conf
-server {
-    listen 80;
-    server_name localhost;
+user nginx;
+worker_processes auto;
 
-    location / {
-        # Proxy requests to the SvelteKit client
-        proxy_pass http://webapp-clt:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
-
-    location /api/ {
-        # Proxy requests to the API server
-        proxy_pass http://nodejs-srv:3000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-    }
+events {
+    worker_connections 1024;
 }
 
+http {
+    sendfile on;
+    keepalive_timeout 65;
+
+    server {
+        listen 80;
+        server_name localhost;
+
+        location / {
+            # Proxy requests to the SvelteKit client
+            proxy_pass http://webapp-clt:3000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /api/ {
+            # Proxy requests to the API server
+            proxy_pass http://nodejs-srv:3000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        # error_page 500 502 503 504 /50x.html;
+        # location = /50x.html {
+        #     root /usr/share/nginx/html;
+        # }
+    }
+}
