made changes to svelte
enlever les volumes : V
client :passer en multi stage la compilation -> déploiement V
port en variable env V
ajouter les dockerignores V

--- a/tv-shows-catalog/client/Dockerfile
+++ b/tv-shows-catalog/client/Dockerfile
@@ -1,15 +1,26 @@
 # Créer un Dockerfile pour cette application en mode production
-FROM node:lts
+# S1
+FROM node:lts AS builder
 
 ENV API_BASE_URL=http://nodejs-srv:3000
 
 WORKDIR /usr/src/app
 
-COPY . .
+COPY package.json package-lock.json ./
 
 RUN npm install
 
+COPY . .
+
 RUN npm run build
+
+
+# S2
+FROM node:lts AS deployer
+
+WORKDIR /usr/src/app
+
+COPY --from=builder /usr/src/app .
 
 EXPOSE 3000
 
