--- a/restaurant-website/Dockerfile
+++ b/restaurant-website/Dockerfile
@@ -1,34 +1,30 @@
 # Créer un Dockerfile pour cette application en mode production
-FROM php:8.3-fpm
+FROM php:8.3-fpm-alpine
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
 ENV APP_ENV=prod
-ENV APP_DEBUG=0
 
-RUN apt-get update \
-    && apt-get install -y \
+RUN apk add \
         git \
-        unzip \
-    && rm -rf /var/lib/apt/lists/*
+        unzip
 
 
 WORKDIR /var/www/html
-COPY . /var/www/html
-RUN rm .env
-COPY .envprod .env
+COPY . .
 
 #COPY composer binary from composer image
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 RUN composer install --no-dev --optimize-autoloader --no-interaction
 
-RUN mkdir -p /run/php/
-
 RUN php bin/console asset-map:compile 
 
 RUN chown -R www-data:www-data /var/www/html/var
 
-RUN php bin/console cache:clear --env=prod
+# EXPOSE ${SYNF_PORT:-8000}
+EXPOSE 8000
+EXPOSE 9000
 
-EXPOSE 80
-CMD ["php-fpm"]
+RUN php bin/console cache:clear --env=prod 
+
+
