--- a/restaurant-website/.env
+++ b/restaurant-website/.env
@@ -39,3 +39,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+
+SYNF_PORT=8000
+NGINX_PORT=80
