--- a/restaurant-website/docker-compose.yaml
+++ b/restaurant-website/docker-compose.yaml
@@ -5,13 +5,17 @@ version: '3.9'
 
 services:
   app-resto:
+    container_name: app-resto
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "80:80"
-    # volumes:
-    #   - ./var:/var/www/html/var
     environment:
       - APP_ENV=prod
     restart: always
+
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports: 
+      - "${NGINX_PORT:-80}:80"
