--- a/blog/docker-compose.yaml
+++ b/blog/docker-compose.yaml
@@ -9,8 +9,9 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - blog_db
-    command: sh -c "while ! nc -z blog_db 5432; do sleep 5; done && diesel migration run && ./blog "
+      blog_db:
+        condition: service_healthy
+    command:  diesel migration run && ./blog 
 
 
   blog_db:
@@ -20,8 +21,13 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_DB: blog
-      POSTGRES_PASSWORD: user1
-      POSTGRES_USER: user1
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: root
+    healthcheck:
+      test: CMD-SHELL pg_isready -U root -d blog
+      interval: 10s
+      timeout: 5s
+      retries: 10
     volumes:
       - db_data:/var/lib/postgresql/data
 
