--- a/blog/docker-compose.yaml
+++ b/blog/docker-compose.yaml
@@ -9,9 +9,8 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - blog_db
-    command: sh -c "while ! nc -z blog_db 5432; do sleep 5; done && diesel migration run && ./blog "
-
+      blog_db:
+        condition: service_healthy
 
   blog_db:
     container_name: blog_db
@@ -19,9 +18,14 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: blog
-      POSTGRES_PASSWORD: user1
-      POSTGRES_USER: user1
+      - POSTGRES_DB=blog
+      - POSTGRES_PASSWORD=user1
+      - POSTGRES_USER=user1
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 3s
+      timeout: 5s
+      retries: 10
     volumes:
       - db_data:/var/lib/postgresql/data
 
