--- a/blog/.env.example
+++ b/blog/.env.example
@@ -1,1 +1,5 @@
-DATABASE_URL=postgres://username:password@localhost:5432/database_name
+POSTGRES_DB=db
+POSTGRES_PASSWORD=user
+POSTGRES_USER=pwd
+POSTGRES_DOCKER_NAME=docker_name
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DOCKER_NAME}:5432/${POSTGRES_DB}
