--- a/blog/docker-compose.yaml
+++ b/blog/docker-compose.yaml
@@ -13,14 +13,10 @@ services:
         condition: service_healthy
 
   blog_db:
-    container_name: blog_db
+    container_name: ${POSTGRES_DOCKER_NAME}
     image: "postgres:16"
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_DB=blog
-      - POSTGRES_PASSWORD=user1
-      - POSTGRES_USER=user1
+    env_file:
+      - .env
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
       interval: 3s
