--- a/restaurant-website/Dockerfile
+++ b/restaurant-website/Dockerfile
@@ -1,13 +1,14 @@
 # Créer un Dockerfile pour cette application en mode production
-FROM php:8.3-fpm-alpine
+FROM php:8.2-fpm-alpine
 
 ENV COMPOSER_ALLOW_SUPERUSER=1
 ENV APP_ENV=prod
+ENV TZ=Europe/Paris
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apk add \
         git \
         unzip
-
 
 WORKDIR /var/www/html
 COPY . .
@@ -21,8 +22,6 @@ RUN php bin/console asset-map:compile
 
 RUN chown -R www-data:www-data /var/www/html/var
 
-# EXPOSE ${SYNF_PORT:-8000}
-EXPOSE 8000
 EXPOSE 9000
 
 RUN php bin/console cache:clear --env=prod 
