--- a/restaurant-website/docker-compose.yaml
+++ b/restaurant-website/docker-compose.yaml
@@ -6,6 +6,8 @@ version: '3.9'
 services:
   app-resto:
     container_name: app-resto
+    volumes:
+      - src:/var/www/html
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,8 +16,14 @@ services:
     restart: always
 
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    ports: 
+    image: nginx:alpine
+    ports:
       - "${NGINX_PORT:-80}:80"
+    volumes:
+      - src:/var/www/html
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    links:
+      - app-resto
+
+volumes:
+  src:
