--- a/restaurant-website/docker-compose.yaml
+++ b/restaurant-website/docker-compose.yaml
@@ -11,8 +11,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    environment:
-      - APP_ENV=prod
+    env_file:
+      - .envprod
     restart: always
 
   nginx:
